# Ci40-ew17-bulb

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile.sample  README.md
src/: CMakeLists.txt  app.c  awa.c  awa.h  bulb_controller.c  colors.c  colors.h  log.h
src/libgatt/: CMakeLists.txt  att.h  gatt.c  gatt.h  gattrib.c  log.c
